<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:padding="@dimen/activity_horizontal_margin"
    tools:context="com.example.kdao.iot_farm_broadcastreceiver.MainActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="20dp"
        android:id="@+id/layout_title"
        >
        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:src="@drawable/logo" />
        <TextView android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sqlite_title"
            android:textSize="@dimen/font_medium"
            android:textColor="@color/white"
            android:layout_toRightOf="@id/imageView1"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="15dp"
            />
    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        >
        <TextView
            android:id="@+id/desc"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="@string/blog_msg_label"
            android:textColor="@color/white"
            android:textSize="@dimen/font_small"
            android:layout_marginRight="10dp"
            android:layout_marginTop="10dp"
            android:textAlignment="viewEnd"/>
        <EditText
            android:id="@+id/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="280dp"
            android:padding="3dp"
            android:background="@color/white"
            android:layout_toRightOf="@id/desc"
            android:hint="@string/hint250"
            android:textColorHint="@android:color/darker_gray"
            android:maxLength="250"
            android:inputType="textMultiLine"
            android:textSize="@dimen/font_small"
            android:textColor="@color/dark_black"
            android:lines="10"
            android:minLines="8"
            android:gravity="top|left"
            android:maxLines="20"
            android:scrollbars="vertical" />
    </RelativeLayout>
    <TableLayout
        android:id="@+id/button_grid_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="2"
        android:layout_marginTop="40dp"
        android:paddingLeft="30dp"
        android:paddingRight="30dp" >
        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp">
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="50dp"
                android:layout_marginRight="10dp"
                android:onClick="saveSQLite"
                android:text="@string/save_btn"
                android:textColor="@color/black"
                android:textAllCaps="false"
                android:textSize="@dimen/font_small"
                android:background="@color/light_yellow"/>
            <Button
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_marginLeft="10dp"
                android:layout_height="50dp"
                android:onClick="cancelActivity"
                android:text="@string/cancle_btn"
                android:textSize="@dimen/font_small"
                android:textAllCaps="false"
                android:textColor="@color/black"
                android:background="@color/light_yellow" />
        </TableRow>
    </TableLayout>

</LinearLayout>